# Huffman-Compression

./: .gitignore  CMakeLists.txt  README.md  run
include/: Compression.hpp  FileHandler.hpp  HuffmanTree.hpp  ParseArgs.hpp  PrefixCode.hpp  UserInputHandler.hpp
src/: Compression.cpp  FileHandler.cpp  HuffmanTree.cpp  ParseArgs.cpp  PrefixCode.cpp  UserInputHandler.cpp
tests/: PrefixCode_test.cpp
